2011-11-03  Erik Arvidsson  <arv@chromium.org>

        Remove support for LegacyDefaultOptionalArguments
        https://bugs.webkit.org/show_bug.cgi?id=71489

        Reviewed by Darin Adler.

        This removes support for LegacyDefaultOptionalArguments and [RequiresAllArguments=Raise].
        [RequiresAllArguments=Raise] is now the standard behavior so it would be a no op.

        No new tests. Covered by existing tests.

        * bindings/scripts/CodeGeneratorJS.pm:
        (GenerateArgumentsCountCheck): Check the "RequiresAllArguments" extended attribute and generate code
                                       that returns undefined if there are missing arguments.
        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateArgumentsCountCheck): Ditto.
        * bindings/scripts/test/JS/JSTestMediaQueryListListener.cpp:
        (WebCore::jsTestMediaQueryListListenerPrototypeFunctionMethod): Add generated argument count checks.
        * bindings/scripts/test/JS/JSTestObj.cpp:
        (WebCore::jsTestObjPrototypeFunctionVoidMethodWithArgs): Ditto.
        (WebCore::jsTestObjPrototypeFunctionIntMethodWithArgs): Ditto.
        (WebCore::jsTestObjPrototypeFunctionObjMethodWithArgs): Ditto.
        (WebCore::jsTestObjPrototypeFunctionSerializedValue): Ditto.
        (WebCore::jsTestObjPrototypeFunctionIdbKey): Ditto.
        (WebCore::jsTestObjPrototypeFunctionOptionsObject): Ditto.
        (WebCore::jsTestObjPrototypeFunctionCustomArgsAndException): Ditto.
        (WebCore::jsTestObjPrototypeFunctionAddEventListener): Ditto.
        (WebCore::jsTestObjPrototypeFunctionRemoveEventListener): Ditto.
        (WebCore::jsTestObjPrototypeFunctionWithDynamicFrameAndArg): Ditto.
        (WebCore::jsTestObjPrototypeFunctionWithDynamicFrameAndOptionalArg): Ditto.
        (WebCore::jsTestObjPrototypeFunctionWithDynamicFrameAndUserGesture): Ditto.
        (WebCore::jsTestObjPrototypeFunctionWithDynamicFrameAndUserGestureASAD): Ditto.