@@ -1,3 +1,12 @@
+2011-11-03  Daniel Bates  <dbates@rim.com>
+
+        CMake: Only generate from WebGL IDLs when building with WebGL
+        https://bugs.webkit.org/show_bug.cgi?id=71516
+
+        Reviewed by Martin Robinson.
+
+        * CMakeLists.txt:
+
 2011-11-03  Erik Arvidsson  <arv@chromium.org>
 
         Remove support for LegacyDefaultOptionalArguments
